# ppplay

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile.in  INSTALL  README.md  TODO  Thumbs.db  config.h.in  gcc46linuxbuild.sh  git.kdev4  pack-src.sh  peepeeplayer.desktop  peepeeplayer.kdev4  ppp.cpp  ppp.rc  ppplay.cpp  ppplay.desktop  ppplay.rc  pr.sh
cmake/: FindLog4Cxx.cmake  FindSDL2.cmake
data/: peepeeplayer-hsc.xml  ppp.texinfo
docdata/: serialization.dia
src/: .gitignore  CMakeLists.txt  Mainpage.dox  Mainpage.dox.in  sdlloader.cpp  ui_main.cpp  ui_main.h
src/abandoned/: README  fft.cpp  fft.h
src/abandoned/xmmod/: xmmodule.cpp  xmmodule.h  xmsample.cpp
src/adplug/: CMakeLists.txt  a2m.cpp  a2m.h  adl.cpp  adl.h  adplay.cc  adplug.cpp  adplug.h  adtrack.cpp  adtrack.h  amd.cpp  amd.h  bam.cpp  bam.h  bmf.cpp  bmf.h  cff.cpp  cff.h  cli-players.h  cmf.cpp  cmf.h  d00.cpp  d00.h  database.cpp  database.h  debug.h  defines.h  dfm.cpp  dfm.h  disk.cc  disk.h  dmo.cpp  dmo.h  dro.cpp  dro.h  dro2.cpp  dro2.h  dtm.cpp  dtm.h  flash.cpp  (+71 more)
src/adplug/bankgen/: CMakeLists.txt  bankdatabase.cpp  bankdatabase.h  bankgen.cpp  loader.cpp  loader.h
src/adplug/compression/: CMakeLists.txt  sixpack.cpp  sixpack.h
src/adplug/mid/: almidi.cpp  almidi.h  dualchips.cpp  dualchips.h  multichips.cpp  multichips.h  timbre.cpp
src/genmod/: CMakeLists.txt  Module.dox  abstractchannel.cpp  abstractchannel.h  abstractmodule.cpp  abstractmodule.h  abstractorder.cpp  abstractorder.h  breseninter.cpp  breseninter.h  channelstate.cpp  channelstate.h  genbase.cpp  genbase.h  gencell.cpp  gencell.h  genchannel.cpp  genchannel.h  genmodule.cpp  genmodule.h  genorder.cpp  genorder.h  genpattern.cpp  genpattern.h  gensample.cpp  gensample.h  ipatterncell.cpp  ipatterncell.h  modulemetainfo.h  modulestate.cpp  modulestate.h  orderentry.cpp  orderentry.h  pppexcept.cpp  pppexcept.h  pvector.h  sample.cpp  sample.h  songinfo.cpp  songinfo.h  (+5 more)
src/genmod/phaser/: CMakeLists.txt  phaser.cpp  phaser.h
src/hscmod/: CMakeLists.txt  hscmodule.cpp  hscmodule.h  plugin.cpp
src/itmod/: CMakeLists.txt  filters.h  fixedpoint.h  hostchannel.h  instrument.h  itdata.cpp  itdata.h  itmodule.cpp  itmodule.h  plugin.cpp  sample.h  slavechannel.cpp  slavechannel.h
src/light4cxx/: CMakeLists.txt  Module.dox  level.h  location.cpp  location.h  logger.cpp  logger.h
src/logger/: CMakeLists.txt  logger.cpp  logger.h
src/modmod/: CMakeLists.txt  Module.dox  modbase.cpp  modbase.h  modcell.cpp  modcell.h  modchannel.cpp  modchannel.h  modmodule.cpp  modmodule.h  modorder.cpp  modorder.h  modpattern.cpp  modpattern.h  modsample.cpp  modsample.h  plugin.cpp
src/output/: CMakeLists.txt  Module.dox  abstractaudiooutput.cpp  abstractaudiooutput.h  abstractaudiosource.cpp  abstractaudiosource.h  audiofifo.cpp  audiofifo.h  audiotypes.cpp  audiotypes.h  fft.cpp  fft.h  fftobserver.cpp  fftobserver.h  iaudiooutput.cpp  iaudiooutput.h  iaudiosource.cpp  iaudiosource.h  mp3audiooutput.cpp  mp3audiooutput.h  oggaudiooutput.cpp  oggaudiooutput.h  outgen.cpp  outgen.h  outsdl.cpp  outsdl.h  sdlaudiooutput.cpp  sdlaudiooutput.h  volumeobserver.cpp  volumeobserver.h  wavaudiooutput.cpp  wavaudiooutput.h
src/ppg/: CMakeLists.txt  Module.dox  color.h  fonts.cpp  fonts.h  label.cpp  label.h  pfonts.inc  point.cpp  point.h  positionbar.cpp  positionbar.h  ppg.cpp  ppg.h  ppgbase.cpp  ppgbase.h  ppgexcept.cpp  ppgexcept.h  ppglabel.cpp  ppglabel.h  progressbar.cpp  progressbar.h  rect.cpp  rect.h  screen.cpp  screen.h  sdlscreen.cpp  sdlscreen.h  stereopeakbar.cpp  stereopeakbar.h  widget.cpp  widget.h
src/ppg/tests/: CMakeLists.txt  ppg_test.cpp
src/s3mmod/: CMakeLists.txt  Module.dox  plugin.cpp  s3mbase.cpp  s3mbase.h  s3mcell.cpp  s3mcell.h  s3mchannel.cpp  s3mchannel.h  s3minstrument.h  s3mmodule.cpp  s3mmodule.h  s3morder.cpp  s3morder.h  s3mpattern.cpp  s3mpattern.h  s3msample.cpp  s3msample.h
src/stmmod/: CMakeLists.txt  stmbase.cpp  stmbase.h  stmchannel.cpp  stmchannel.h  stmmodule.cpp  stmmodule.h  stmpattern.cpp  stmpattern.h  stmsample.cpp  stmsample.h
src/stream/: CMakeLists.txt  abstractarchive.cpp  abstractarchive.h  archivefilestream.cpp  archivefilestream.h  binstream.cpp  binstream.h  fbinstream.cpp  fbinstream.h  filestream.cpp  filestream.h  iarchive.cpp  iarchive.h  iserializable.cpp  iserializable.h  memarchive.cpp  memarchive.h  memorystream.cpp  memorystream.h  sbinstream.cpp  sbinstream.h  stateiterator.cpp  stateiterator.h  stream.cpp  stream.h
src/stuff/: CMakeLists.txt  fft.cpp  fft.h  field.h  inputplugin.h  itimer.cpp  itimer.h  moduleregistry.cpp  moduleregistry.h  mutex.cpp  mutex.h  mutexlocker.h  numberutils.cpp  numberutils.h  pluginregistry.cpp  pluginregistry.h  pppexcept.cpp  pppexcept.h  scopedcall.h  sdlmutexlocker.h  sdltimer.cpp  sdltimer.h  stringutils.cpp  stringutils.h  system.cpp  system.h  trackingcontainer.h  utils.cpp  utils.h
src/stuff/tests/: CMakeLists.txt  field_test.cpp
src/xmmod/: CMakeLists.txt  Module.dox  plugin.cpp  xmbase.h  xmcell.cpp  xmcell.h  xmchannel.cpp  xmchannel.h  xmenvelopeprocessor.cpp  xmenvelopeprocessor.h  xminstrument.cpp  xminstrument.h  xmmodule.cpp  xmmodule.h  xmorder.cpp  xmorder.h  xmpattern.cpp  xmpattern.h  xmsample.cpp  xmsample.h
src/ymf262/: CMakeLists.txt  abstractchannel.cpp  abstractchannel.h  abstractrhythmchannel.cpp  abstractrhythmchannel.h  bassdrumchannel.cpp  bassdrumchannel.h  channel.cpp  channel.h  channel2op.cpp  channel2op.h  channel4op.cpp  channel4op.h  disabledchannel.h  envelopegenerator.cpp  envelopegenerator.h  fractional9.h  highhatoperator.cpp  highhatoperator.h  highhatsnaredrumchannel.cpp  highhatsnaredrumchannel.h  imfplay.cpp  operator.cpp  operator.h  opl3.cpp  opl3.h  oplfilter.h  phase.h  phasegenerator.cpp  phasegenerator.h  snaredrumoperator.cpp  snaredrumoperator.h  tomtomoperator.h  tomtomtopcymbalchannel.cpp  tomtomtopcymbalchannel.h  topcymbaloperator.cpp  topcymbaloperator.h
